<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">


    <TextView
        android:id="@+id/Registertxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/acme"
        android:text="@string/register"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/Nama"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:background="@drawable/backgroud_et"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="8dp"
        android:hint="@string/masukan_nama_anda"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/Registertxt" />


    <com.herdi.yusli.herdistoryapp.customView.EmailEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:alpha="0"
        android:background="@drawable/backgroud_et"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="8dp"
        android:hint="@string/masukan_email_anda"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nama" />


    <com.herdi.yusli.herdistoryapp.customView.RegisterEditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:background="@drawable/backgroud_et"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="@string/masukan_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registerKAp"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="3dp"
        android:alpha="0"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Nama"
        app:layout_constraintStart_toStartOf="@+id/Nama" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="3dp"
        android:alpha="0"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="3dp"
        android:alpha="0"
        android:text="@string/password"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>